# Gammon

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  collect_evals.py  collect_rollouts.py  compare_datasets.cpp  extract_evals.sh  extract_rollout.sh  generate_openings.cpp  generate_positions.cpp  get_race_dataset_subset.cpp  gnu_many_games.py  interactive.cpp  main.cpp  nn.cpp  nn_eval.cpp  nn_evaluate_dataset.cpp  recover_partial_evals.sh  run_gnu_game.py
include/: board.h  dataset.h  misc.h  move.h  movegen.h  net.h
src/: board.cpp  dataset.cpp  misc.cpp  move.cpp  movegen.cpp  net.cpp
